# sqlx-pg

./: .gitignore  Cargo.toml  sqlx-pg.sql
rest/: category.http  chat.http  post.http  session.http  topic.http  user.http
src/: err.rs  lib.rs  main.rs
src/category/: handler.rs  model.rs
src/chat/: handler.rs  model.rs
src/post/: handler.rs  model.rs
src/session/: handler.rs  model.rs
src/topic/: handler.rs  model.rs
src/user/: handler.rs  model.rs
